--- a/NN/main_project.ipynb
+++ b/NN/main_project.ipynb
@@ -117,28 +117,23 @@
    ],
    "source": [
     "Network = Sequential([\n",
-    "    # İlk Convolution Katmanı\n",
     "    Conv2D(32, (3, 3), activation='relu', input_shape=(256, 256, 3)),\n",
     "    MaxPooling2D(2, 2),\n",
-    "    Dropout(0.25), # Dropout katmanı\n",
+    "    Dropout(0.25),\n",
     "\n",
-    "    # İkinci Convolution Katmanı\n",
     "    Conv2D(64, (3, 3), activation='relu'),\n",
     "    MaxPooling2D(2, 2),\n",
     "    Dropout(0.25),\n",
     "\n",
-    "    # Üçüncü Convolution Katmanı\n",
     "    Conv2D(128, (3, 3), activation='relu'),\n",
     "    MaxPooling2D(2, 2),\n",
     "    Dropout(0.25),\n",
     "\n",
-    "    # Düzleştirme (Flatten)\n",
     "    Flatten(),\n",
     "\n",
-    "    # Yoğun (Dense) Katmanlar\n",
     "    Dense(512, activation='relu'),\n",
     "    Dropout(0.5),\n",
-    "    Dense(5, activation='softmax') # 5 sınıf için son katman\n",
+    "    Dense(5, activation='softmax')\n",
     "])\n",
     "Network.summary()"
    ]
@@ -269,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook saved as 19.36_15.03.2024.html\n"
+      "Notebook saved to ..\\Results\\amanneo as 19.37_15.03.2024.html\n"
      ]
     }
    ],
